@@ -1,3 +1,13 @@
+2005-01-29 18:55 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormClassInspector.m: In -addAction:, -addOutlet:, -removeAction:,
+	-removeOutlet:, -selectClass: made changes to make sure that if
+	the document is not active, that the method will fall through.  This
+	prevents a crash when user presses buttons on the class inspector
+	window when the document is miniaturized.
+	* Palettes/2Controls/inspectors.m: Improved error when the
+	.gorm file can't be loaded for GormBoxInspector.
+
 2005-01-28 21:50 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* Palettes/2Controls/GormNSStepperInspector.gorm: Corrected problem
